<resources>
    <string name="app_name">Phone Dialer</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="digit0">0</string>
    <string name="hash">#</string>
    <string name="star">*</string>
    <string name="digitButton">digitButton</string>
</resources>